[EasyForms] Rules refacto & move to commons